src/test/ui/consts/min_const_fn/address_of.stderr
error[E0658]: `&raw mut` is not allowed in constant functions
  --> $DIR/address_of.rs:5:13
   |
LL |     let b = &raw mut a;
   |             ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/57349
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: `&raw mut` is not allowed in constant functions
  --> $DIR/address_of.rs:13:17
   |
LL |         let b = &raw mut a;
   |                 ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/57349
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
